[package]
name = "mirai_core_utils_i"
version = "0.1.0"

[dependencies]
md5 = "0.7.0"
sha1 = "0.10.1"
flate2 = "1.0.23"
libc = "0.2.126"
#chashmap = "2.2.2"

[lib]
name = "mirai_core_utils_i"
crate-type = ["cdylib"]      # Creates dynamic lib
# crate-type = ["staticlib"] # Creates static lib

[build-dependencies]
bindgen = "0.53.1"
cbindgen = "0.20.0"
